fix: make z-index higher of aside to properly display over quadrant title

--- a/src/components/Aside/Aside.scss
+++ b/src/components/Aside/Aside.scss
@@ -8,7 +8,7 @@
   height: 100%;
   background: $ui-light;
   border-right: 1px solid $ui-base-border;
-  z-index: ($z-index-high +1);
+  z-index: ($z-index-high + 7);
 
   hr {
     margin-left: 5%;
